cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_232.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:137: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:137:13: Write of unused value
135.               tout1 = tin[1];
136.               l2n(tout0, out);
137.               l2n(tout1, out);
                   ^
138.           }
139.           l2n(tout0, ivec);
